# virt-firmware

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  setup.cfg
experimental/: bootcfg.py  bootmenu.py  dbxupdate.py  measure.py
man/: kernel-bootcfg.1  kernel-bootcfg.inc  uefi-boot-menu.1  virt-fw-dump.1  virt-fw-dump.inc  virt-fw-sigdb.1  virt-fw-vars.1  virt-fw-vars.inc
ovmfctl/: __init__.py  ovmfctl.py  ovmfdump.py
ovmfctl/certs/: MicrosoftCorporationKEKCA2011.pem  MicrosoftWindowsProductionPCA2011.pem  RedHatSecureBootPKKEKkey1.pem
ovmfctl/efi/: __init__.py  certs.py  devpath.py  edk2.py  efijson.py  efivar.py  guids.py  linux.py  siglist.py  ucs16.py
systemd/: 99-uki-uefi-setup.install  kernel-bootcfg-boot-successful.service
tests/: test-bootcfg.sh  test-dump.sh  test-pe.sh  test-sigdb.sh  test-vars.sh  tests.py
tests/data/: MicrosoftUEFICertificateAuthority_Template.json  secboot.aws
virt/firmware/: __init__.py  dbxupdate.py  dump.py  edk2.py  host.py  migrate.py  misc.py  peutil.py  sigdb.py  vars.py
virt/firmware/aws/: dict.v0
virt/firmware/bootcfg/: __init__.py  bootcfg.py  linuxcfg.py  main.py  menu.py
virt/firmware/certs/: CentOSSecureBootCA2.pem  CentOSSecureBootCAkey1.pem  FedoraSecureBootCA.pem  MicrosoftCorporationUEFICA2011.pem  RedHatSecureBootCA3.pem  RedHatSecureBootCA5.pem  RedHatSecureBootCA6.pem  fedoraca-20200709.pem
virt/firmware/efi/: __init__.py  bootentry.py  certs.py  devpath.py  efijson.py  efivar.py  guids.py  siglist.py  ucs16.py
virt/firmware/varstore/: __init__.py  aws.py  azure.py  edk2.py  linux.py
virt/peutils/: __init__.py  peutils.py
