[metadata]
name = virt-firmware
version = 1.3
description = tools for virtual machine firmware volumes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ovmf, armvirt, edk2, aws
license = GPLv2
license_files = LICENSE
author = Gerd Hoffmann
author_email = kraxel@redhat.com
project_urls =
    GitLab = https://gitlab.com/kraxel/virt-firmware

[options]
packages = virt/firmware, virt/firmware/efi, virt/firmware/varstore
install_requires =
    cryptography
    pefile

[options.entry_points]
console_scripts =
    host-efi-vars = virt.firmware.host:main
    virt-fw-vars = virt.firmware.vars:main
    virt-fw-dump = virt.firmware.dump:main
    virt-fw-sigdb = virt.firmware.sigdb:main
    migrate-vars = virt.firmware.migrate:main
    pe-dumpinfo = virt.firmware.peutil:pe_dumpinfo
    pe-listsigs = virt.firmware.peutil:pe_listsigs
    pe-addsigs = virt.firmware.peutil:pe_addsigs

[options.package_data]
virt/firmware = certs/*.pem, aws/dict.v0
